<resources>
    <string name="app_name">pilipili</string>
    <string name="preview_text">preview_text</string>
    <string name="login_toolbar_title">登录</string>
    <string name="login_account_hint">你的账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_registered_btn_txt">注册账号</string>
    <string name="login_login_btn_txt">登录</string>
    <string name="registered_toolbar_title">注册</string>
    <string name="registered_account_hint">账号</string>
    <string name="registered_username_hint">用户名</string>
    <string name="registered_password_hint">密码</string>
    <string name="registered_confirm_password_hint">确认密码</string>
    <string name="registered_registered_btn_txt">注册</string>
    <string name="comment_reply_num_text">%1$d条回复</string>
    <string name="info_picture_intro_download_text">下载</string>
    <string name="replies_toolbar_title">评论详情</string>
    <string name="user_intro_hint">这个UP主很懒，什么都没留下</string>
    <string name="info_picture_intro_hint">UP主没有写简介</string>
    <string name="input_text_hint">写下你想说的</string>
</resources>
