<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        android:id="@+id/registered_toolbar"
        layout="@layout/include_toolbar"
        android:navigationIcon="@drawable/icon_toolbar_back"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_16dp">

            <EditText
                android:id="@+id/registered_account_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:drawablePadding="@dimen/dimen_16dp"
                android:drawableStart="@drawable/icon_registered_account"
                android:drawableTint="@color/selector_registered_account_color"
                android:hint="@string/registered_account_hint"
                android:lines="1"
                android:textSize="@dimen/dimen_14sp"/>

            <EditText
                android:id="@+id/registered_username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:drawablePadding="@dimen/dimen_16dp"
                android:drawableStart="@drawable/icon_registered_username"
                android:drawableTint="@color/selector_registered_username_color"
                android:hint="@string/registered_username_hint"
                android:lines="1"
                android:textSize="@dimen/dimen_14sp"/>

            <EditText
                android:id="@+id/registered_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:drawablePadding="@dimen/dimen_16dp"
                android:drawableStart="@drawable/icon_registered_password"
                android:drawableTint="@color/selector_registered_password_color"
                android:hint="@string/registered_password_hint"
                android:lines="1"
                android:textSize="@dimen/dimen_14sp"/>

            <EditText
                android:id="@+id/registered_confirm_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:drawablePadding="@dimen/dimen_16dp"
                android:drawableStart="@drawable/icon_registered_confirm_password"
                android:drawableTint="@color/selector_registered_confirm_password_color"
                android:hint="@string/registered_confirm_password_hint"
                android:lines="1"
                android:textSize="@dimen/dimen_14sp"/>

            <Button
                android:id="@+id/registered_registered_btn"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/registered_registered_btn_txt"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>